<resources>
    <string name="facebook_app_id" translatable="false">994366434064633</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb994366434064633</string>
    <string name="app_name" translatable="false">GTE</string>
    <string name="editarMonitor">Editar Monitor(a)</string>
    <string name="ListaVanMotorista">Sua Van</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="conf_senha">Confirmar senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastroResp">Cadastro Responsável</string>
    <string name="não_lembro">Esqueceu sua senha?</string>
    <string name="login_opts">Outras opções de login</string>
    <string name="mostrarMenos">Mostrar menos</string>
    <string name="monitora">Monitora</string>
    <string name="motorista">Motorista</string>
    <string name="adm">Administrador</string>
    <string-array name="resp">
        <item>Escolha...</item>
        <item>Responsável</item>
    </string-array>
    <string name="logar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="userRecuperarSenhaLand">Ajudaremos você a recuperar sua senha, para isso preencha seu e-mail ao lado:</string>
    <string name="proximo">Próximo</string>
    <string name="msg">Mensagem</string>
    <string name="crianca">Crianças</string>
    <string name="grafico">Gráficos</string>
    <string name="money">Mensalidade</string>
    <string name="van">Vans</string>
    <string name="acesso">Acesso</string>
    <string name="pendente">Pendente</string>
    <string name="pago">Pago</string>
    <string name="txtEmpresa">Verificamos que você não possui uma conta vinculada no Sistema GTE. Preencha o campo abaixo com o código fornecido pelo administrador.</string>
    <string name="atrasada">Atrasada</string>
    <string name="real">R$ </string>
    <string name="criancaEspaço">Criança:  </string>
    <string name="funcionario">Funcionários</string>
    <string name="listaFunc">Listagem de Funcionários</string>
    <string name="ListarMensalidades">Listagem de Mensalidades</string>
    <string name="listaEscolas">Listagem Escolas</string>
    <string name="listaResp">Listagem de Responsáveis</string>
    <string name="recuperarSenha">Recuperar Senha</string>
    <string name="userEsqueceuSenha">Esqueceu sua  senha?</string>
    <string name="userRecuperarSenha">Ajudaremos você a recuperar sua senha, para isso preencha seu e-mail abaixo:</string>
    <string name="titleContextMenu">Ações</string>
    <string name="editar">Editar</string>
    <string name="EditarVan">Editar Van</string>
    <string name="excluir">Excluir</string>
    <string name="enquete">Enquete</string>
    <string name="responsavel">Responsavel</string>
    <string name="editarResponsavel">Editar Responsável</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="escolas">Escolas</string>
    <string name="editar_criancas">Editar Crianças</string>
    <string name="responsaveis">Responsaveis</string>
    <string name="cepInvalido">CEP inválido</string>
    <string name="EditEscola">Editar Escola</string>
    <string name="editarCrianca">Editar Criança</string>
    <string name="editarMotorista">Editar Motorista</string>
    <string name="editarInfo">Editar suas informações</string>
    <string name="cadastroFunc">Cadastrar funcionário</string>
    <string name="cadastroEscola">Cadastrar Escolas</string>
    <string name="capacidadeVan">Capacidade:</string>
    <string name="modeloVan">Modelo:</string>
    <string name="placaVan">Placa:</string>
    <string name="anoVan">Ano:</string>
    <string name="EditarPerfil">Editar Perfil</string>
    <string name="marcaVan">Marca:</string>
    <string name="cadMensalidade">Cadastrar Mensalidade</string>
    <string name="editarFunc">Editar Funcionários</string>
    <string name="selecionarEscola">Selecionar escola</string>
    <string name="informacoesSalvasSucesso">Informações Salvas com sucesso!</string>
    <string name="opcoesDialog">Opções</string>
    <string name="textoDialog">Edite ou exclua esse registro, ou clique fora para cancelar</string>
    <string name="excluirDialog">Excluir</string>
    <string name="editarDialog">Editar</string>
    <string name="excluidoComSucesso">Excluido com sucesso.</string>
    <string name="senhasDiferentes">Senhas diferentes!</string>
    <string name="senhasMenor">Senha precisam ser maiores que 8 caracteres!</string>
    <string name="senhasMaior">Senhas precisam ser menores que 12 caracteres!</string>
    <string name="LoginSenhaIncorreta">Senha incorreta</string>
    <string name="LoginEmailNaoCadastrado">E-mail não cadastrado</string>
    <string name="LoginPermissao">Permissão negada</string>
    <string name="painel">O que deseja fazer?</string>
    <string name="AppBarPainel">Painel</string>
    <string name="maisOpcoes">Mais opções</string>
    <string name="txtSobre">GTE é uma plataforma que tem o intuito de auxiliar motorista e monitores de vans escolares. Auxiliar também os responsáveis a ter maior controle do transporte diário de seus filhos.</string>
    <string name="cadastrarSe">Cadastrar-se</string>
    <string name="contato">Contato</string>
    <string name="contatoTela1">Olá, para entrar em contato conosco, vamos precisar de algumas informações suas, por favor digite seu nome e seu e-mail abaixo:</string>
    <string-array name="assuntosContato">
        <item>Tenho uma dúvida</item>
        <item>Tenho uma sugestão</item>
        <item>Quero contratar</item>
        <item>Achei um erro</item>
        <item>Outros</item>
    </string-array>
    <string-array name="meses">
        <item>Selecione um mês:</item>
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="ola">Olá</string>
    <string name="continuarContato">, para entrar em contato, por favor selecione o assunto e escreva sua mensagem abaixo:</string>
    <string name="enviar">Enviar</string>
    <string name="verificarCampos">Preencha todos os campos</string>
    <string name="loadingMsg">Enviando sua mensagem.</string>
    <string name="loadingDados">Enviando dados</string>
    <string name="loadingLogin">Entrando</string>
    <string name="loadingRegistros">Carregando os registros</string>
    <string name="loadingExcluindo">Excluindo</string>
    <string name="RecuperarSenhaSucessoProgress">Um e-mail foi enviado para você redefinir sua senha</string>
    <string name="MsgSucesso">Mensagem enviada com sucesso.</string>
    <string-array name="tipousuario">
        <item>Escolha...</item>
        <item>Motorista</item>
        <item>Monitora</item>
        <item>Responsável</item>
    </string-array>
    <string-array name="tipoFunc">
        <item>Escolha...</item>
        <item>Motorista</item>
        <item>Monitora</item>
    </string-array>
    <string-array name="cad_func">
        <item>Escolha...</item>
        <item>Motorista</item>
        <item>Monitora</item>
    </string-array>
    <string-array name="categoria">
        <item>Cat. CNH</item>
        <item>Categoria D</item>
        <item>Categoria E</item>
    </string-array>
    <string name="sx">Sexo</string>
    <string name="tipoUserFeedback">Selecione o seu tipo de usuario.</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="mensagem">Mensagem</string>
    <string name="cadastrar">Não possuo cadastro</string>
    <string name="title_activity_usuario">Usuario</string>
    <string name="cadastro_motorista">Cadastro do Motorista</string>
    <string name="cadastro_resp">Cadastro do Responsavel</string>
    <string name="cadastro_monitora">Cadastro da Monitora</string>
    <string name="cadastro_van">Cadastro van</string>
    <string name="telefone">Celular</string>
    <string name="rg" translatable="false">RG</string>
    <string name="cpf" translatable="false">CPF</string>
    <string name="datanascimento">Data de nascimento</string>
    <string name="salario">Salário </string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="end_escola">Endereço da escola</string>
    <string name="n_escola">Nome da escola</string>
    <string name="cnh">Informações do CNH:</string>
    <string name="info_crianca">Informações da criança:</string>
    <string name="habilitacao">Data da 1° habilitação</string>
    <string name="validade">Validade</string>
    <string name="registro">N° do registro</string>
    <string name="carteira">Categoria da carteira</string>
    <string name="data_admissao">Data de admissão</string>
    <string name="h_saida">Hora de saida</string>
    <string name="h_entrada">Hora de entrada</string>
    <string name="cep">CEP</string>
    <string name="rua">Rua</string>
    <string name="num">Número</string>
    <string name="validadeCnh">Validade da CNH</string>
    <string name="data_habilitacao">Data da 1ª habilitação</string>
    <string name="complemento">Complemento</string>
    <string name="horaEntrada">Entrou na van</string>
    <string name="horaSaida">Saiu da escola</string>
    <string name="horaEscola">Chegou a escola</string>
    <string name="horaCasa">Chegou em casa</string>
    <string-array name="estados">
        <item>Escolha o seu estado</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="title_activity_cad_monitora" translatable="false">cad_monitora</string>
    <string name="title_activity_cad_van" translatable="false">CadVanActivity</string>
    <string name="capacidade">Capacidade</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="anoFab">Ano de fabricação</string>
    <string name="marca">Marca</string>
    <string name="listaCriancas">Listagem de crianças</string>
    <string name="listaAcessos">Acessos</string>
    <string name="cadastro_crianca">Cadastro da Criança</string>
    <string name="cadastro_escola">Cadastro da Escola</string>
    <string name="title_activity_listagem_func_adm">Fncionarios</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_endereco">Editar endereço</string>
    <string name="sair">Sair</string>
    <string name="title_activity_editar_func" translatable="false">EditarFunc</string>
    <string name="mais_op_es">Mais opções</string>
    <string name="cadastradoSucesso">Cadastradado com sucesso</string>
    <string name="cadastro_da_escola">Cadastro da Escola</string>
    <string name="pesquisarSearchPlaceholder">Pesquisar...</string>
    <string name="data_vencimento">Data de vencimento</string>
    <string name="editarMensalidade">Editar Mensalidade</string>
    <string name="nenhumaCriancaCadastrada">Não possui nenhuma criança cadastrada!</string>
</resources>