<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="xyz.sistemagte.gte.Cadastro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cad_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textSize="40sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/cad_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nome"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/sobrenome"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_conf_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/conf_senha"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/telefone"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/cpf"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/rg"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_datanascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/datanascimento"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!-- TODO: personalizar esse spiinner -->
                <Spinner
                    android:id="@+id/cad_tipousuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tipousuario"
                    android:layout_weight="1"
                    android:background="@drawable/input_style"
                    />
                <!-- TODO: personalizar esse btn -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enviar"
                    android:id="@+id/cadastro"
                    android:onClick="Cadastrar"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>

