<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="xyz.sistemagte.gte.Cad_funcionario">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/cad_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastroFunc"
                android:textSize="40sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/cad_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nome"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/sobrenome"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_conf_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/conf_senha"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/telefone"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/cpf"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/rg"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/cad_datanascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/datanascimento"
                android:background="@drawable/input_style"
                android:layout_marginBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/cad_func"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tipoFunc"
                    android:layout_weight="1"
                    android:background="@drawable/input_style"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enviar"
                    android:textColor="@color/branco"
                    android:id="@+id/cadastro"
                    android:onClick="Cadastrar"
                    android:background="@drawable/btn_padrao"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


