<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="xyz.sistemagte.gte.cad_van">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cadastro_van"
        android:textSize="40sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cad_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cad_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/capacidade"
                android:inputType="number" />

            <EditText
                android:id="@+id/cad_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/modelo" />

            <EditText
                android:id="@+id/cad_complemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/placa" />

            <EditText
                android:id="@+id/hora_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/anoFab"
                android:inputType="time" />

            <EditText
                android:id="@+id/hora_saida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_style"
                android:ems="10"
                android:hint="@string/marca"
                android:inputType="time" />

            <Button
                android:id="@+id/cadastro_motorista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cadastrarVan"
                android:text="@string/enviar"
                android:textColor="@color/branco"
                android:background="@drawable/btn_padrao"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
